--- a/web/login.css
+++ b/web/login.css
@@ -70,8 +70,9 @@ body::-webkit-scrollbar {
 .card-content .card-body {
     position: relative;
     top: -16px;
-    display: flex;
-    width: 700px;
+    display: inline-flex;
+    justify-content: center;
+    width: 500px;
     margin-bottom: 8px;
 }
 
@@ -126,7 +127,7 @@ body::-webkit-scrollbar {
 /* -------- register style ---------- */
 
 .login-wrapper {
-    width: 50%;
+    width: 100%;
     padding-left: 24px;
     padding-right: 24px;
 }
