--- a/web/admin/admin-manage/usermanager.css
+++ b/web/admin/admin-manage/usermanager.css
@@ -1,12 +1,12 @@
 
-
-.panel-footer .btn:hover {
+/*Table*/  
+  .panel-footer .btn:hover {
     border: 1px solid #cf030d;
     background-color: #fff !important;
     color: #cf030d;
-}
-
-.panel-heading {
+  }
+  
+  .panel-heading {
     color: #fff !important;
     background-color: #cf030d !important;
     padding: 20px;
@@ -16,118 +16,264 @@
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
     font-size: x-large;/*add*/
-
-}
-
-.panel-body{
+    
+  }
+  
+  .panel-body{
     font-size: medium;
-}
+  }
 
-.panel-footer {
+  .panel-footer {
     background-color: #fff !important;
-}
-
-.panel-footer .btn {
+  }
+  
+  
+  .panel-footer .btn {
     margin: 5px 0;
     background-color: #cf030d;
     color: #fff;
-}
+  }
 
-#myBtn {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    z-index: 99;
-    font-size: 25px;
-    border: none;
-    outline: none;
-    background-color: #cf030d;
-    color: white;
-    cursor: pointer;
-    padding: 20px;
-    border-radius: 25px;
-}
+  
 
-#myBtn:hover {
-    background-color: rgb(124, 120, 120);
-}
-
-.navbar{
-    background-color: rgb(24, 24, 23);
-    font-size: medium;
-    padding: 15px;
-}
+  
 .btn-danger{
     background-color: #cf030d;
     color: #fff;
 }
 
-#admin1{
-    display: block;
-}
-
-
-
-
-
+/* #admin1{
+  display: block;
+} */
 
 table {
-    position: fixed;
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 80%;
-    top: 150px; 
+  position: fixed;
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 80%;
+  top: 200px; 
 }
+
 table.center{
-    margin-left: 10%;
-    margin-right: 10%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 table:hover{
-    box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+  box-shadow: 5px 0px 40px rgba(0,0,0, .2);
 }
 
 td, th {
-    border: 1px solid #dddddd;
-    text-align: center;
-    padding: 8px;
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
 }
 
 #email11{
-    width: 40%;
+  width: 40%;
 }
 
 #password11{
-    width: 20%;
+  width: 20%;
 }
 
 #id11{
-    width: 5%;
+  width: 5%;
 }
 
 #role11{
-    width: 15%;
+  width: 15%;
 }
 
 #del-btn{
-    width: 15%;
+  width: 15%;
 }
 #action11{
-    width: 15%;
+  width: 15%;
 }
 
 th{
-    background-color: activeborder;
+  background-color: activeborder;
 }
 
-.listform {
-    margin-bottom: 60px;
+.listform1 {
+  margin-bottom: 60px;
 }
 
 h1{
-    text-align: center;
+  text-align: center;
 }
-#box1{
-    display: none;
+#box{
+  display: none;
+}
+/*Table*/
+/* #del-btn{
+  margin: 15px 0;
+    background-color: #cf030d;
+    color: #fff;
+    font-size: 14px;
+} */
+
+/*navbar*/
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
 
+li {
+  float: left;
+}
+
+li a, .dropbtn {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+/*navbar*/
+
+/*-----*/
+
+/* Full-width input fields */
+#email1{
+  width: 40%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+#password1 {
+  width: 20%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+
+#id01{
+  display: none;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+/*Button*/
+
+#submit1{
+  background-color: #cf030d;
+  color: #fff;
+  font-size: 16px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 10px;
+}
+
+#submit1:hover {
+  background-color: rgb(124, 120, 120);
+}
+
+#cancel1{
+    background-color: #cf030d;
+    color: #fff;
+    font-size: 16px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 10px;
+}
+
+#cancel1:hover {
+    background-color: rgb(124, 120, 120);
+}
+
+#myBtn1 {    
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 99;
+  font-size: 25px;
+  border: none;
+  outline: none;
+  background-color: #cf030d;
+  color: white;
+  cursor: pointer;
+  padding: 20px;
+  border-radius: 25px;
+}
+
+#myBtn1:hover {
+  background-color: rgb(124, 120, 120);
+}
+
+#genPassword1{
+    background-color: #cf030d;
+    color: #fff;
+    font-size: 16px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 10px;
+}
+
+#genPassword1:hover{
+    background-color: rgb(124, 120, 120);
+}
+
+#del-btn1{
+    background-color: #cf030d;
+    color: #fff;
+    font-size: 16px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 10px;
+}
+
+#del-btn1:hover{
+    background-color: rgb(124, 120, 120);
+}
+
+/*Button*/
