--- a/web/admin/user-manage/profile.css
+++ b/web/admin/user-manage/profile.css
@@ -14,18 +14,11 @@ and open the template in the editor.
 
 /* -----------------------body new feed wrapper -------------------- */
 .body-wrapper {
-   width: 1002px;
-   margin-top: 50px;
-   margin-left: auto;
-   margin-right: auto;
-   padding-top: 30px;
-   padding-bottom: 24px;
-   padding-left: 24px;
-   padding-right: 24px;
-   align-items: stretch;
-   font-size: 15px;
    display: flex;
+   justify-content: center;
    flex-direction: row;
+   position: relative;
+   top: 100px;
 }
 /* -----------------------end body new feed wrapper -------------------- */
 
